# PiEAMBAS

./: README.md
Practice/practice_1/: practice_1.md  rmbas.xml
Practice/practice_2/: practice_2.md
Practice/practice_3/: distance_home.lua  practice_3.md
Practice/practice_4/: practice_4.md
Practice/practice_4/ros2_mavros_distance_home/: package.xml  setup.cfg  setup.py
Practice/practice_4/ros2_mavros_distance_home/launch/: distance_home.launch.py
Practice/practice_4/ros2_mavros_distance_home/resource/: ros2_mavros_distance_home
Practice/practice_4/ros2_mavros_distance_home/ros2_mavros_distance_home/: distance_home_node.py
Practice/practice_4/ros2_mavros_takeoff/: package.xml  setup.cfg  setup.py
Practice/practice_4/ros2_mavros_takeoff/launch/: arm_takeoff.launch.py
Practice/practice_4/ros2_mavros_takeoff/ros2_mavros_takeoff/: arm_takeoff_node.py
Practice/practice_4/ros2_mavros_waypoint_mission/: package.xml  setup.cfg  setup.py
Practice/practice_4/ros2_mavros_waypoint_mission/config/: waypoints.yaml
Practice/practice_4/ros2_mavros_waypoint_mission/launch/: waypoint_mission.launch.py
Practice/practice_4/ros2_mavros_waypoint_mission/ros2_mavros_waypoint_mission/: waypoint_mission_node.py
Practice/practice_5/: practice_5.md
